# backend

./: .travis.yml  Dockerfile  README.md  env-template  pyproject.toml  run.sh
backend/: __init__.py  authentication.py  config.py  json_encoder.py  mail.py  utils.py
backend/api/: __init__.py  shops.py  users.py  utils.py
backend/models/: __init__.py  database.py  shops.py  users.py
backend/templates/: confirmed.txt  registration.txt
ci/: travis-env
examples/: fill_some_data.py
migrations/versions/: 0f49db3b8ad0_.py  4e86b6077e49_.py  82b31f437b30_.py  b816e28f965b_.py  dbd2af3f0fad_.py  e91038fb4a2d_.py
tests/: conftest.py  test_api.py  test_authentication.py  test_mail.py  test_models.py  test_registration.py  test_shops.py
